# SocketTemplate

./: .gitignore  CMakeLists.txt  README.md
examples/inc/: receiver.hpp  sender.hpp
examples/linux/: CMakeLists.txt
examples/linux/src/: receiver.cpp
examples/src/: receiver.cpp  sender.cpp
examples/windows/: app.py  config.ini
examples/windows/tcp/: client.py  server.py
inc/: client.hpp  server.hpp
src/: client.cpp  main.cpp  server.cpp
